# mira_sim

./: .gitignore  Dockerfile  Makefile  NOTES  docker-compose.yml  pyproject.toml
ardupilot/: mav.parm  mav.tlog  mav.tlog.raw  mav_0_1.parm
src/common_resources/: CMakeLists.txt  package.xml
src/common_resources/data/: ArucoPlane.mtl  Gate.mtl
src/common_resources/data/bluerov2/stl/: base.stl  dome.stl  duct_left_front.stl  duct_left_rear.stl  duct_left_up_front.stl  duct_left_up_rear.stl  duct_right_front.stl  duct_right_rear.stl  duct_right_up_front.stl  duct_right_up_rear.stl  first_cylinder.stl  left_foam.stl  left_side.stl  left_sideUP.stl  right_foam.stl  right_side.stl  right_sideUP.stl  second_cylinder.stl
src/common_resources/data/bluerov2/stl/simple_hydro/: bluerov2_base.stl  foams.stl
src/common_resources/data/wind_turbine/stl/: wind_turbine_base_ned.stl
src/dnt_simulator/: CMakeLists.txt  package.xml
src/dnt_simulator/launch/: sauvc.launch.py  tac.launch.py
src/dnt_simulator/scenarios/: bluerov2.scn  bluerov2_alt.scn  bluerov2_newthrusterconfig.scn  bluerov2_tank.scn  bluesim.scn
src/dnt_simulator/scripts/: ardusim_patch.py
src/mira2_rov/: CMakeLists.txt  package.xml
src/mira2_rov/include/mira2_rov/: joystick_utils.hpp  keyboard_utils.hpp
src/mira2_rov/launch/: teleop.launch
src/mira2_rov/src/: joystick_main.cpp
src/vortex_simulator/: CMakeLists.txt  package.xml
src/vortex_simulator/config/: tacc_config.yaml
src/vortex_simulator/scenarios/: tacc.scn
