<?xml version="1.0"?>
<package format="3">
  <name>mira2_rov</name>
  <version>0.0.0</version>
  <description>The mira2_rov package</description>

  <!-- Maintainer information -->
  <maintainer email="f3rt@todo.todo">f3rt</maintainer>

  <!-- License information -->
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>joy</depend>
  

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Additional information can be added here -->
  </export>
</package>
